force-app/main/default/objects/PricebookEntry/fields/PMC_CPQ_MOTInboundTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MOTInboundTransportation__c</fullName>
    <description>This field will hold the MOT/Inbound Transportation values</description>
    <label>MOT/Inbound Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MOTInboundTransportationValueSet</valueSetName>
    </valueSet>
</CustomField>