force-app/main/default/objects/PricebookEntry/fields/PMC_CPQ_OriginProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OriginProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to store the associated Origin Product</description>
    <label>Origin Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Origin Product</relationshipLabel>
    <relationshipName>Price_Book_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>