force-app/main/default/objects/PricebookEntry/fields/PMC_CPQ_ProductSKUCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSKUCode__c</fullName>
    <description>This field is to store SKU Code of the Product associated</description>
    <formula>Product2.StockKeepingUnit</formula>
    <label>Product SKU Code</label>
    <type>Text</type>
</CustomField>