force-app/main/default/objects/PricebookEntry/fields/PMC_CPQ_SAPMaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPMaterialGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to store the SAP Material group of the product</description>
    <label>Material Group</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SAP Material Group</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>